# DB_presentation

./: README.md  docker-compose.yml  main.py  pyproject.toml
active_record/: manage.py
active_record/active_record/: asgi.py  settings.py  urls.py  wsgi.py
active_record/active_record_app/: apps.py  models.py  urls.py  views.py
active_record/active_record_app/migrations/: 0001_initial.py
dbschema/: dbschema.py
dbschema/scripts/: __init__.py  create_book.sql  delete_book.sql  get_book.sql  get_books.sql  update_book.sql
