[tool.poetry]
name = "db-presentation"
version = "0.1.0"
description = ""
authors = ["Ilya Lure <L1mple@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
fastdto = {extras = ["all"], version = "^0.2.0"}
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
