[tool.poetry]
name = "db-presentation"
version = "0.1.0"
description = ""
authors = ["Ilya Lure <L1mple@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
asyncpg = "^0.30.0"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
